# pico-boat-steering

./: CMakeLists.txt  main.c
.github/workflows/: build-uf2.yml
